--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/feedback/feedback.html
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/feedback/feedback.html
@@ -24,7 +24,7 @@
             <div class="feed-boxfeed px-0">
                 
                    @for (feedback of Feedbacks(); track  $index ; let i = $index) {
-                    <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card">
+                    <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card cr">
                     <div class="col-xl-8 col-9">
                         <div class="row ">
                             <div class="me-xxl-0 me-lg-3 px-0 col-lg-2 col-sm-1 me-4 me-lg-0">
