--- a/src/app/Pages/Interfaces_Employee/myprofile/myprofile.scss
+++ b/src/app/Pages/Interfaces_Employee/myprofile/myprofile.scss
@@ -1,6 +1,8 @@
 .imageCover{
+    width: 90%;
+    height: 240px;
     object-fit: cover !important;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 @media (max-width: 576px) {
