--- a/src/app/Pages/Interfaces_Employee/myprojects/myprojects.scss
+++ b/src/app/Pages/Interfaces_Employee/myprojects/myprojects.scss
@@ -50,3 +50,18 @@ ease;
         object-fit: cover;
 
 }
+
+
+.booked {
+  color: #0b6b6e;
+  font-weight: 900 ;
+}
+.seletType{
+  background: #0B6B6E33;
+ padding: 10px 10px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.active{
+background: #0B6B6E;
+}
