--- a/src/app/Pages/client/client.html
+++ b/src/app/Pages/client/client.html
@@ -90,19 +90,7 @@
                                 <h6 class="mb-1 fw-bold card-title">{{ project.name}}</h6>
                                 <h5 class="mb-1 card-text">{{ project.about | shorten: 20}}</h5>
                                 <p>{{ project.createdAt | date}}</p>
-                                <div class="mt-4 row">
-                                    <div class="col">
-                                        <h6 style="color: #00bec5;">{{ project.services[0]?.name }}</h6>
-                                    </div>
-
-                                    <div class="col text-end">
-                                        @switch (project.clientType) {
-                                        @case (0) { <p class="mt-0 mb-0">Old Client</p> }
-                                        @case (1) { <p class="mt-0 mb-0">Long Term</p> }
-                                        @case (2) { <p class="mt-0 mb-0">New Client</p> }
-                                        }
-                                    </div>
-                                </div>
+                               
                             </div>
                         </div>
                     </a>
@@ -115,8 +103,24 @@
                 </div>
                 }
             </div>
+                @if(totalPages() > 1){
+                      <div class="pagination">
+                <button class="nav-btn" (click)="prevPage()" [disabled]="!hasPreviousPage()">
+                    previous
+                </button>
+                <div class="pages">
+                    @for (page of visiblePages; track page) {
+                    <button class="page" [class.active]="page === currentPage()" [disabled]="page === currentPage()"
+                        (click)="goToPage(page)">
+                        {{ page }}
+                    </button>
+                    }
+                </div>
+                <button class="nav-btn" (click)="nextPage()" [disabled]="!hasNextPage()">
+                    Next
+                </button>
+            </div>
+                }
         </div>
     </div>
 </div>
-<h2 class="mt-5 text-end pt-sm-4 logout" style="color: #00bec5;">SUBMIT <i class="fa-solid fa-arrow-right fs-5"
-        style="color: #00bec5;"></i></h2>
