--- a/src/app/Pages/notifaction/notifaction.html
+++ b/src/app/Pages/notifaction/notifaction.html
@@ -1,47 +1,65 @@
 <div class="mb-5 notifiction-sec text-white px mt-4 ">
-  <h1 class="mb-4 text-end big">NOTIFICATIONS</h1>
+  <h1 class=" text-end big mt-5">NOTIFICATIONS</h1>
 
   <div class="p-md-5 p-3 rounded-3 row notifiction">
     <div class="col-6"></div>
     <div class="mt-0 col-md-6 text-end pe-4">
       <div class="dropdown ps-5 mt-3">
-          <div class="select" (click)="toggleMenu()">
-                        <div class="caret">
-                            <i class="fa-solid fa-angle-down fs-5" [class.rotate]="isOpen" style="color: #00bec5;">
-                            </i>
-                        </div>
-                        <span class="selected fs-2">{{ selected }}</span>
+        <div class="select" (click)="toggleMenu()">
+          <div class="caret">
+            <i class="fa-solid fa-angle-down fs-5" [class.rotate]="isOpen" style="color: #00bec5;">
+            </i>
+          </div>
+          <span class="selected fs-2">{{ selected() }}</span>
 
-                    </div>
-                    <ul class="p-3 rounded-3 menu list-unstyled text-end" [class.menu-open]="isOpen">
-                       @for ( option of options; track $index) {
-                           <li  (click)="selectOption(option)"
-                            [class.active]="selected === option">
-                            {{ option }}
-                        </li>
-                       }
-                    </ul>
+        </div>
+        <ul class="p-3 rounded-3 menu list-unstyled text-end" [class.menu-open]="isOpen">
+          @for ( option of options; track $index) {
+          <li (click)="selectOption(option)" [class.active]="selected() === option">
+            {{ option }}
+          </li>
+          }
+        </ul>
       </div>
       <p class="small mb-4">KEEP THE GOOD WORK!!</p>
     </div>
 
     <div class="notification-container">
-      @for (item of notifications; track $index) {
-        <div class="p-md-4 p-3 py-3 mt-3 mx-0 row rounded-3 notifiction-card">
-          <div class="col-8 align-content-center px-0">
-            <p class="mb-0 small-">{{ item.message }}</p>
-          </div>
-          <div class="col px-0">
-            <div class="row text-end">
-              <div>
-                <p class="mb-0 small-">{{ item.date }}</p>
-              </div>
-              <div>
-                <p class="mb-0 small">{{ item.time }}</p>
-              </div>
+      @for (item of filteredNotifications(); track $index) {
+      <div class="p-md-4 p-3 py-3 mt-3 mx-0 row rounded-3 notifiction-card" (click)="mark(item)">
+        <div class="col-8 align-content-center px-0">
+          @if (item.data) {
+          <h3 class="mb-0 small-">
+            <span class="booked">{{ item.data.clientName }}</span>
+            booked a meeting
+            <span class="booked">
+              {{ formatDate(item.data.meetingDate) }}
+              ( {{ slots[item.data.meetingTime] }} )
+            </span>
+          </h3>
+          }
+          @else {
+          <p class="mb-0 small-">{{ item.title }}</p>
+          }
+
+        </div>
+        <div class="col px-0">
+          <div class="row text-end">
+            <div>
+              <p class="mb-0 small-">{{ item.createAt | date }}</p>
+            </div>
+            <div>
+              {{ item.createAt | date:'hh:mm a' }}
             </div>
           </div>
         </div>
+      </div>
+      }
+      @empty {
+      <div class="text-center mt-5">
+        <p class="text-muted">No notifications available</p>
+            </div>
+
       }
     </div>
   </div>
