--- a/src/app/Pages/projects/projectDetalis/components/chat/chat.scss
+++ b/src/app/Pages/projects/projectDetalis/components/chat/chat.scss
@@ -7,6 +7,7 @@
   padding: 10px 15px;
   margin-top: 10px;
   width: 200px;
+  text-decoration: none;
   cursor: pointer;
   transition: 0.3s ease;
 
@@ -37,4 +38,44 @@
       opacity: 0.7;
     }
   }
+}
+.tabs {
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #444;
+}
+
+.tab-button {
+  background: none;
+  border: none;
+  color: #888;
+  font-size: 16px;
+  padding: 10px 0;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.tab-button.active {
+  color: #fff;
+  font-weight: 500;
+}
+
+.active-line {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 33.33%;
+  height: 3px;
+  background: #14d7e7;
+  border-radius: 4px;
+  transition: transform 0.3s ease;
+}
+
+.empty-tab {
+  padding: 40px;
+  text-align: center;
+  color: #aaa;
+  font-size: 18px;
 }
