--- a/src/app/Pages/projects/projectDetalis/components/feedback/feedback.html
+++ b/src/app/Pages/projects/projectDetalis/components/feedback/feedback.html
@@ -1,6 +1,6 @@
-<div class="text-white feed-back px-md-0 px-3">
-    <div class=" " style="background-image: none;">
-    <div class="d-flex justify-content-between align-items-center my-5 headerText">
+<div class="text-white  feed-back px-md-0 px-3">
+    <div class="px-3 " style="background-image: none; ">
+    <div class="d-flex justify-content-end align-items-center my-5 headerText">
 
                     <h1 class=" text-end px-0 ">FEEDBACKS</h1>
  
@@ -22,8 +22,8 @@
      
             <div class="feed-boxfeed px-0">
                 
-                   @for (feedback of Feedbacks(); track  $index ; let i = $index) {
-                    <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card">
+                   @for (feedback of Feedbacks(); track   feedback.id ; let i = $index) {
+                    <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card cr" [routerLink]="['/getfeedback',feedback.id]">
                     <div class="col-xl-8 col-9">
                         <div class="row ">
                             <div class="me-xxl-0 me-lg-3 px-0 col-lg-2 col-sm-1 me-4 me-lg-0">
