--- a/src/app/Pages/projects/projectDetalis/components/posts/posts.html
+++ b/src/app/Pages/projects/projectDetalis/components/posts/posts.html
@@ -1,51 +1,53 @@
 <div class="third pt-5">
   <div class="text-white p-5 mt-5" style="background-color: #171818; border-radius: 13px">
     <div class="row">
-      <div class="col-5">
-        <div class="blue text-center p-2 rounded-3 pe-2" style="background-color: #0b6b6e; margin-left: -70px">
-          <h2 class="pe-4 me-5 mb-0">SOCIAL MEDIA</h2>
-        </div>
-      </div>
-      <div class="d-flex col-8 p-4 rounded-3 mt-5" style="background-color: #2d2d2d">
-        <div class="col-7 pe-3">
-          <div class="d-flex align-items-center">
-            <h3 class="mb-0">{{ posts[currentIndex()].title }}</h3>
-            <div class="box row py-1 px-4 ms-auto rounded-3" style="background-color: #616161">
-              Animated
-            </div>
+      <div class="d-flex justify-content-between mb-5">
+        <div class="col-5">
+          <div class="blue text-center p-2 rounded-3 pe-2" style="background-color: #0b6b6e; margin-left: -70px">
+            <h2 class="pe-4  mb-0">SOCIAL MEDIA </h2>
           </div>
-          <h5 class="text-white-50">SEP 12</h5>
-          <h6 class="mt-4 pt-3">Title :</h6>
-      <p>{{ posts[currentIndex()].description }}</p>
-          <h6 class="mt-4 pt-3">Caption :</h6>
-        <p style="text-align: justify">{{ posts[currentIndex()].caption }}</p>
-          <h6 class=" text-end mt-4 pt-3"> : وصف</h6>
-
-          <P class="text-end" style="text-align: justify">{{ posts[currentIndex()].captionArabic }}</P>
         </div>
-        <div class="col-5 ps-4"><img class="w-100 rounded-3" src="assets/img/Rectangle.jpg" alt="" /></div>
+        <div class="col-2">
+          <div class="blue btnlink text-center p-2 rounded-3 pe-2"
+            style="background-color: #0b6b6e; margin-right: -70px">
+            <h2 class="pe-4  mb-0" (click)="goAddPost()">Add post </h2>
+          </div>
+        </div>
       </div>
-      <div class="d-flex ms-5 col p-4 rounded-3 mt-5" style="background-color: #2d2d2d">
+      <div class=" col-8">
+        <router-outlet></router-outlet>
+      </div>
+      <div class="d-flex ms-5 col rounded-3 " style="background-color: transparent">
 
 
         <!-- month-picker.component.html -->
-        <div class="month-picker d-flex w-100 justify-content-between flex-column">
+        <div class="month-picker d-flex w-100 justify-content-between flex-column gap-2">
           <div class="header m-0">
-            <span (click)="prevYear()">&#8592;</span>
-            <span>Page 1</span>
-            <span (click)="nextYear()">&#8594;</span>
+            <span (click)="prevPage()">&#8592;</span>
+            <span> Page {{ pageNumber }} </span>
+            <span (click)="nextPage()">&#8594;</span>
           </div>
 
-          <div class="grid post-card ">
-            <div 
-      *ngFor="let post of posts; let i = index"
-      (click)="selectPost(i)"
-      class="cardSelect"
-      [class.active]="i === currentIndex()"
-      style=" cursor: pointer; border-radius: 5px; "
-    >
-      <img [src]="post.image" class="w-100 h-100 object-fit-cover" />
-    </div>
+          <div class="grid post-card">
+            <div *ngFor="let post of displayPosts; let i = index" class="cardSelect"
+              style="cursor: pointer; border-radius: 5px;">
+
+              <ng-container *ngIf="post.file; else emptyDiv">
+                 @if(post.fileType === 0) {
+                       <img [src]="baseurl + post.file" class="w-100 h-100 object-fit-cover" [routerLink]="['posts' , post.id]" />
+                 }
+                  @if(post.fileType === 1) {
+                                              <img src="Image/video-frame-svgrepo-com.svg" class="w-100 h-100 " style="object-fit: fill;" [routerLink]="['posts' , post.id]" />
+
+                  }
+              </ng-container>
+
+              <!-- إذا مفيش ملف -->
+              <ng-template #emptyDiv>
+                <div class="w-100 h-100 bg-gray-800 rounded cardEmpty p-5"></div>
+              </ng-template>
+
+            </div>
           </div>
 
           <div class="footer m-0">
@@ -77,12 +79,9 @@
           </div>
         </div>
 
-        <!-- loader bar -->
         <div class="bar-wrapper mt-3 rounded-3" style="height: 12px">
-          <!-- gradient glow (blurred) behind the fill -->
           <div id="barGlow" class="bar-glow"></div>
 
-          <!-- actual fill -->
           <div id="loaderBar" class="bar-fill"></div>
         </div>
       </div>
