--- a/src/app/Pages/projects/projects/projects.html
+++ b/src/app/Pages/projects/projects/projects.html
@@ -10,20 +10,20 @@
             <div class="col-lg-6 pb-3 pe-lg-3 ps-lg-2 ">
                 <div class="p-4  rounded-3 d-flex w-auto  right-box h-90 justify-content-between ">
                     <div class=" ">
-                        <h2 class="mb-xl-3 mb-sm-4 mb-3">NEW Projects</h2>
+                        <h2 class="mb-xl-3 mb-sm-4 mb-3">NEW PROJECTS</h2>
                         <p class="mb-2">IN THE PAST 30 DAYS</p>
-                        <span class="mb-0 text-white   p-0 pt-md-0 pt-1 w-auto h-auto "
-                            style="font-size: 100px;">15</span>
+                        <p class=" h3 text-white  mt-4 " style="font-size: 110px;">15</p>
 
                     </div>
                     <div class="d-flex flex-column align-items-end">
-                        <div class="px-0"><img class="mb-3 pb-3 px-0  " src="assets/img/Rectangle 721.png" alt=""></div>
-                        <p class="p-0 ms-sm-4  mb-1 ps-lg-3  align-content-start w-100">INCREASE</p>
-                        <div class="d-flex ps-xl-4 gap-2 ps-0  align-content-start w-100">
+                        <div class="px-0 d-flex justify-content-end align-items-end w-100"><img class="mb-3 pb-3 px-0  "
+                                src="assets/img/Rectangle 721.png" width="80%" alt=""></div>
+                        <p class="p-0 ms-sm-4  mb-1 align-content-start w-100">INCREASE</p>
+                        <div class="d-flex ps-xl-4 mt-4 gap-2 ps-0  align-content-start w-100">
                             <div class="align-content-end h-75">
-                                <img class="mt-sm-4 mt-2 pt-3 pe-1" width="30" src="assets/img/Arrow 1.svg" alt="">
+                                <img class=" mt-0  pe-1 mb-2" width="30" src="assets/img/Arrow 1.svg" alt="">
                             </div>
-                            <span class="p-0 pt-md-0 pt-1 m-0 text-start w-100  h-auto ">30%</span>
+                            <span class="p-0 h3 pt-md-0 pt-1 m-0 text-start  ">30%</span>
                         </div>
                     </div>
                 </div>
@@ -40,17 +40,33 @@
 
                         </div>
                         <p class="small mb-0 text-end">KEEP THE GOOD WORK!!</p>
-                  <ul class="p-3 rounded-3 menu list-unstyled text-end" [class.menu-open]="isOpen">
-                        <li *ngFor="let option of options" (click)="selectOption(option)"
-                            [class.active]="selected() === option">
-                            {{ option }}
-                        </li>
-                    </ul>
+                        <ul class="p-3 rounded-3 menu list-unstyled text-end" [class.menu-open]="isOpen">
+                            <li *ngFor="let option of options" (click)="selectOption(option)"
+                                [class.active]="selected() === option">
+                                {{ option }}
+                            </li>
+                        </ul>
 
                     </div>
+                    <div class="flex-wrap  pb-2 rounded-3 d-flex  gap-4 mb-2">
+                        <div class="text-center col seletType " [class.active]="selectedProjectType() === 0"
+                            (click)="selectProjectType(0)">
+                            <p class="mb-0">Simple Project</p>
+                        </div>
 
+                        <div class="text-center col seletType " [class.active]="selectedProjectType() === 1"
+                            (click)="selectProjectType(1)">
+                            <p class="mb-0">
+                                Social Media</p>
+                        </div>
 
-                    <div class="flex-wrap pt-4 pb-2 rounded-3 d-flex blue ps-md-0 ps-2 pe-2 pe-sm-0">
+                        <div class="text-center col seletType " [class.active]="selectedProjectType() === 2"
+                            (click)="selectProjectType(2)">
+                            <p class="mb-0">Media Buying </p>
+                        </div>
+                    </div>
+
+                    <div class="flex-wrap  py-2 rounded-3 d-flex blue ">
                         <div class="p-0 text-center col me-5 ms-1">
                             <p class="mb-0">Completed</p>
                             <p class="mb-0 fs-3">{{ getProjectCounts().completed| leadingZero }}</p>
@@ -62,7 +78,7 @@
                         </div>
 
                         <div class="p-0 text-center col">
-                            <p class="mb-0">In Progress  </p>
+                            <p class="mb-0">In Progress </p>
                             <p class="mb-0 fs-3">{{ getProjectCounts().inProgress | leadingZero }}</p>
                         </div>
                     </div>
@@ -91,13 +107,19 @@
                                 <h5 class="mb-1 card-text">{{ project.projectDescription| shorten: 20}}</h5>
                                 <p>{{ project.createdAt | date}}</p>
                                 <div class="mt-4 row">
-                             
+                                    <div class="col ">
+                                        @switch (project.projectType) {
+                                        @case (0) { <h6 class="mb-3 booked  mb-0">Simple Project </h6> }
+                                        @case (1) { <h6 class="mb-3 booked  mb-0">Social Media</h6> }
+                                        @case (2) { <h6 class="mb-3 booked  mb-0">Media Buying </h6> }
+                                        }
+                                    </div>
 
                                     <div class="col text-end">
                                         @switch (project.projectStatus) {
-                                            @case (0) { <p class="mt-0 mb-0">In Progress </p> }
-                                        @case (1) { <p class="mt-0 mb-0">Paused</p> }
-                                        @case (2) { <p class="mt-0 mb-0">Completed </p> }
+                                        @case (0) { <p class="mb-3 mb-0">In Progress </p> }
+                                        @case (1) { <p class="mb-3 mb-0">Paused</p> }
+                                        @case (2) { <p class="mb-3 mb-0">Completed </p> }
                                         }
                                     </div>
                                 </div>
@@ -113,6 +135,31 @@
                 </div>
                 }
             </div>
+         @if (totalPages() > 1) {
+  <div class="pagination mt-5">
+    <button class="nav-btn" (click)="prevPage()" [disabled]="!hasPreviousPage()">
+      previous
+    </button>
+
+    <div class="pages">
+      @for (page of visiblePages; track page) {
+        <button 
+          class="page" 
+          [class.active]="page === currentPage()" 
+          [disabled]="page === currentPage()"
+          (click)="goToPage(page)"
+        >
+          {{ page }}
+        </button>
+      }
+    </div>
+
+    <button class="nav-btn" (click)="nextPage()" [disabled]="!hasNextPage()">
+      Next
+    </button>
+  </div>
+}
+
         </div>
     </div>
 </div>
