--- a/src/app/Pages/client/components/addclients/addclients.html
+++ b/src/app/Pages/client/components/addclients/addclients.html
@@ -34,9 +34,9 @@
 
       <!-- Right Side -->
       <div class="col-md-6 px-0">
-        <div class="row second ps-2">
+        <div class="row second ps-2 ">
 
-          <input class="mt-3" type="text" formControlName="username" placeholder="Username" />
+          <input class="mt-3 px-0" type="text" formControlName="username" placeholder="Username" />
           <input class="mt-4 px-0" type="text" formControlName="location" placeholder="Location" />
           <input class="mt-3 px-0 mb-2" type="text" formControlName="website" placeholder="Website" />
         </div>
