--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,7 +85,7 @@ input[type="number"] {
 /* Start team */
 .team-container{
     background-color: var(--dark);
-    height: 1700px !important;
+   max-height: 1700px !important;
 }
 .team .team-container h1{
     font-size: 60px;
@@ -205,7 +205,7 @@ input[type="number"] {
         max-height: 480px !important;
     }
     .team-container {
-        height: 1500px  !important;
+          max-height: 1500px  !important;
     }
     .team .right-box p {
         font-size: 10px;
@@ -239,7 +239,7 @@ input[type="number"] {
     padding-left: 10px;
   }
     .team-container {
-        height: 1340px;
+          max-height: 1340px;
     }
     .team .team-container h1 {
         font-size: 30px;
