--- a/src/app/Pages/projects/projectDetalis/components/show-post/show-post.scss
+++ b/src/app/Pages/projects/projectDetalis/components/show-post/show-post.scss
@@ -12,3 +12,20 @@
     object-fit: cover;
   }
 }
+.btn_bo{
+   display: flex;
+   justify-content: center;
+   position: absolute;
+    bottom: 25px;
+
+    padding: 0  20px;
+
+
+    width: 100%;
+    .btn{
+              backdrop-filter: blur(4px);
+    background: #00000033;
+
+    }
+
+}
