--- a/src/app/Pages/projects/projectDetalis/components/upload-files/upload-files.html
+++ b/src/app/Pages/projects/projectDetalis/components/upload-files/upload-files.html
@@ -120,6 +120,10 @@
 <app-posts />
 
 }
+@if(aboutproject()?.projectType == 2){
+ <app-media-buying />
+
+}
 <app-chat/>
 <app-show-meeting/>
 <app-feedback/>
