--- a/src/app/Pages/projects/projectDetalis/components/media-buying/media-buying.scss
+++ b/src/app/Pages/projects/projectDetalis/components/media-buying/media-buying.scss
@@ -64,6 +64,7 @@
             width: 24px;
             height: 24px;
             border-radius: 6px;
+            cursor: pointer;
         }
 
         .calendar-table td.selected {
