--- a/src/app/Pages/projects/projectDetalis/components/chat/chat.scss
+++ b/src/app/Pages/projects/projectDetalis/components/chat/chat.scss
@@ -46,6 +46,9 @@
   padding-bottom: 10px;
   border-bottom: 1px solid #444;
 }
+.user-img{
+  object-fit: cover;
+}
 
 .tab-button {
   background: none;
